# fractalium

./: AGENTS.md  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
examples/: gen_preset_thumbnails.rs
planning/: backlog.md  overall_plan.md
planning/base_shape_presets/: overall_plan.md  phase1_ui.md  phase2_presets.md
planning/full_fractal_presets/: overall_plan.md  phase1_ui.md  phase2_catalog.md
planning/grid_snap/: overall_plan.md
planning/mobile_ux/: overall_plan.md  task1_narrow_layout.md  task2_global_controls.md  task3_delete_buttons.md  task4_result_pan.md  task5_edit_placement_pinch.md
planning/mvp/: overall_plan.md
planning/perf_mesh_cache/: overall_plan.md
planning/preset_selection_initial_screen/: overall_plan.md  phase1_flow_and_state.md  phase2_screen_swap_ui.md  phase3_thumbnails.md
planning/repository_refactor/: overall_plan.md  phase1_capabilities.md  phase2_patterns.md  phase3_layout.md  phase4_implementation.md  phase5_top_level_rs.md
planning/share_export/: result_png_and_share_menu.md
planning/split_editor/: overall_plan.md  phase1_layout.md  phase2_placement_view.md  phase3_interactive.md
planning/view_refinement/: overall_plan.md  phase1_layout.md  phase2_drag_lag.md  phase3_base_shape_edit.md
planning/web_wasm/: overall_plan.md  phase1_build.md  phase2_browser_mobile.md  phase3_publish.md  (+1 more)
src/: draw.rs  edit.rs  fractal.rs  fractal_presets.rs  grid.rs  lib.rs  main.rs  placement.rs  platform_handles.rs  presets.rs  result_export.rs  seed_shape.rs  share.rs  state.rs  toast.rs  ui.rs  view.rs
(+108 files in other folders)
