[package]
name = "fractalium"
version = "0.1.0"
edition = "2024"

[features]
webgl2 = ["bevy/webgl2"]

[dependencies]
base64 = "0.22"
bevy = "0.18"
bevy_egui = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["History", "Location", "Window"] }

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
