[package]
name = "fractalium"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
webgl2 = ["bevy/webgl2"]

[dependencies]
base64 = "0.22"
bevy = "0.18"
bevy_egui = "0.39"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Blob",
    "Document",
    "Element",
    "File",
    "History",
    "HtmlAnchorElement",
    "HtmlElement",
    "Location",
    "Url",
    "Window",
] }

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
